<resources>
    <string name="app_name">Esa</string>
    <string name="hello_world_text">0</string>
    <string name="random_heading">Here is a random number between 0 and %1d.</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."
    </string>

    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="title_activity_navigation_drawer">NavigationDrawer</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="open">Open</string>
    <string name="close">Close</string>

    <string name="action_example">Example action</string>

    <string name="action_settings">Notification</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_news">News</string>
    <string name="menu_services">Services</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_contact_us">Contact Us</string>
    <string name="menu_ad_market">Ad Market</string>
    <string name="menu_traking">Tracking</string>
    <string name="menu_term_conditions">Term and Conditions</string>
    <string name="menu_faq">Faq</string>
    <string name="menu_logout">Log out</string>
    <string name="menu_notification">Notification</string>


</resources>
